Working on home page. wip

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width">
+    <link rel='stylesheet' href="assets/css/base.css">
     <title>Joel Lithgow</title>
   </head>
   <body>
+    {% include header.html %}
     {{ content }}
   </body>
 </html>
