--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -15,6 +15,7 @@
     font-size: 18px
     grid-area: header
     padding: 8px 16px 8px 16px
+    margin: 8px 0
     margin-left: -16px
 
   &__body
@@ -25,3 +26,6 @@
     grid-area: footer
     justify-self: end
     margin: 8px 0
+
+  &__block
+    margin-bottom: 16px
