--- a/src/assets/css/home.sass
+++ b/src/assets/css/home.sass
@@ -5,6 +5,7 @@ $baseurl: "{{ site.url }}"
 @import "mixins/buttons"
 @import "mixins/containers"
 @import "mixins/syantax"
+@import "includes/artwork-item"
 
 .about
   &__text
@@ -17,17 +18,3 @@ $baseurl: "{{ site.url }}"
   &__button
     justify-self: start
 
-.artwork
-  &__type
-    display: inline-block
-    font-weight: lighter
-    margin: 8px 0
-  &__title
-    display: inline-block
-    margin: 8px 4px
-    font-size: 18px
-  &__image
-    width: 100%
-    max-height: 150px
-    box-shadow: $shadow-2dp
-    margin: 4px 0
