--- a/src/assets/css/home.sass
+++ b/src/assets/css/home.sass
@@ -18,3 +18,8 @@ $baseurl: "{{ site.url }}"
   &__button
     justify-self: start
 
+.social
+  &__list
+    list-style: none
+  &__item
+    display: inline-flex
