--- a/src/_includes/artwork-item.html
+++ b/src/_includes/artwork-item.html
@@ -1,5 +1,5 @@
 <div class="artwork_item">
-  <h3 class="artwork_item__type">/{{ include.label }} <span class="syantax-colon">:</span></h3>
+  <h3 class="artwork_item__type">- {{ include.label }} <span class="syantax-colon">:</span> </h3>
   <a href="{{ include.artwork.url }}">
     <h4 class="artwork_item__title button-inline">{{ include.artwork.title }}</h4>
   </a>
