More styling + header format change.

--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -17,6 +17,7 @@
     padding: 8px 16px 8px 16px
     margin: 8px 0
     margin-left: -16px
+    text-decoration: underline
 
   &__body
     color: $yellow
