--- a/src/_sass/includes/artwork-item.sass
+++ b/src/_sass/includes/artwork-item.sass
@@ -4,8 +4,7 @@
     margin: 8px 0
   &__title
     display: inline-block
-    margin: 8px 4px
-    font-size: 18px
+    margin: 8px 0
   &__image
     width: 100%
     max-height: 150px
