added footer and fixed up spacing everything else.

--- a/src/_sass/includes/footer.sass
+++ b/src/_sass/includes/footer.sass
@@ -1,7 +1,6 @@
-.header
+.footer
   background-color: $black
-  border-bottom: #111111
-  border-top: $gray
 
   &__logo
+    text-align: right
     padding: 8px 16px
