--- a/src/_sass/variables.sass
+++ b/src/_sass/variables.sass
@@ -1,6 +1,7 @@
 $yellow: #FFC845 
 $black: #222222
 $gray: #333333
+$grey: #555555
 $red: #CF4520
 
 $font-header: "Roboto", "Open Sans", sans-serif
