--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -2,6 +2,7 @@
 ---
 @import "variables"
 @import "includes/header"
+@import "includes/footer"
 
 html body
   height: 100%
@@ -9,7 +10,7 @@ html body
   padding: 0
   margin: 0
 
-p, button, ul, a, h2, h3, h4
+p, button, ul, a, h1, h2, h3, h4
   margin: 0
   padding: 0
 
@@ -23,6 +24,11 @@ h3, h4
 h3
   font-weight: lighter
 
+h1
+  color: $yellow
+  font-size: 20px
+  font-weight: 200
+
 button, p, li
   font-size: 16px
 
@@ -32,3 +38,4 @@ p, li
 
 h2
   text-decoration: inherit
+  font-size: 20px
