--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -1,4 +1,6 @@
 .container
+  border-top: 1px solid $grey
+  border-bottom: 1px solid $black
   background-color: $gray
   display: grid
   grid-template-columns: 1fr
