Styled img, needs to be refactored eventually for other imgs.

--- a/src/_sass/includes/artwork-item.sass
+++ b/src/_sass/includes/artwork-item.sass
@@ -10,3 +10,7 @@
     max-height: 150px
     box-shadow: $shadow-2dp
     margin: 4px 0
+    border: 5px solid $grey
+    box-sizing: border-box
+    cursor: pointer
+    object-fit: cover
