--- a/src/assets/css/home.sass
+++ b/src/assets/css/home.sass
@@ -15,6 +15,10 @@ $baseurl: "{{ site.url }}"
   &__avatar
     display: inline-block
     float: right
+    width: 40%
+    margin-left: 16px
+    box-sizing: border-box
+    box-shadow: $shadow-2dp
   &__button
     justify-self: start
 
