Fixed style base so it works on all pages. Made header clickable.

--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -1,6 +1,7 @@
 ---
 ---
 @import "variables"
+@import "mixins/containers"
 @import "includes/header"
 @import "includes/footer"
 
@@ -13,6 +14,10 @@ html body
 p, button, ul, a, h1, h2, h3, h4
   margin: 0
   padding: 0
+
+img
+  width: 100%
+  height: 100%
 
 
 h1, h2, h3, h4, button, a
