--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,3 +1,5 @@
 <div class="header">
-  <h1 class="header__logo">jlithgow.com</h1>
+  <a class="header__logo" href="/">
+    <h1>jlithgow.com</h1>
+  </a>
 </div>
