--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width">
-    <link rel='stylesheet' href="assets/css/base.css">
+    <link rel='stylesheet' href="/assets/css/base.css">
     <title>Joel Lithgow</title>
   </head>
   <body>
