--- a/src/_sass/includes/header.sass
+++ b/src/_sass/includes/header.sass
@@ -2,6 +2,8 @@
   background-color: $black
   border-bottom: #111111
   border-top: $gray
+  padding:  8px 16px
 
   &__logo
-    padding: 8px 16px
+    color: $yellow
+    text-decoration: underline
