Working on artworks section and card

--- a/src/assets/css/artworks.sass
+++ b/src/assets/css/artworks.sass
@@ -1,5 +1,7 @@
 ---
 ---
+@include "includes/artwork-card"
+
 p
   font-size: 100px
  
@@ -8,3 +10,4 @@ p
     display: grid
     grid-template-columns: 1fr 1fr
     grid-gap: 16px
+    list-style: none
