Styled artworks page + global styles.

--- a/src/_sass/includes/artwork-card.sass
+++ b/src/_sass/includes/artwork-card.sass
@@ -1,8 +1,13 @@
 .artwork_card
-  border: 1px solid $yellow
   border-radius: 3px
   background-color: $gray
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5)
+  box-shadow: $shadow-2dp
   
   &__title
+    color: $black
     padding: 4px 8px
+    background-color: $yellow
+    border-radius: 0 0 3px 3px
+
+  & img
+    border-radius: 3px 3px 0 0
