--- a/src/_sass/includes/header.sass
+++ b/src/_sass/includes/header.sass
@@ -1,9 +1,9 @@
 .header
   background-color: $black
-  border-bottom: #111111
-  border-top: $gray
+  border-bottom: $black-dark
+  border-top: $black-light
   padding:  8px 16px
 
   &__logo
     color: $yellow
-    text-decoration: underline
+    text-decoration: none
