--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -1,6 +1,6 @@
 .container
-  border-top: 1px solid $grey
-  border-bottom: 1px solid $black
+  border-top: 1px solid $gray-light
+  border-bottom: 1px solid $gray-dark
   background-color: $gray
   display: grid
   grid-template-columns: 1fr
@@ -21,6 +21,7 @@
 
   &__body
     color: $yellow
+    margin: 8px 0
     grid-area: body
 
   &__footer
