--- a/src/_sass/variables.sass
+++ b/src/_sass/variables.sass
@@ -1,10 +1,14 @@
 $yellow: #FFC845 
-$black: #222222
-$gray: #333333
-$grey: #555555
+$white: #FFFFFF
+$gray-light: #444444
+$gray:       #333333
+$gray-dark:  #222222
+$black-light: #222222
+$black:       #111111
+$black-dark:  #000000
 $red: #CF4520
 
-$font-header: "Roboto", "Open Sans", sans-serif
+$font-header: "Roboto Mono", "Open Sans", sans-serif
 $font-body: "Open Sans", sans-serif
 
 $shadow-2dp: 0 2px 4px 0 rgba(0,0,0,0.5)
