--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -1,7 +1,6 @@
 ---
 ---
 @import "variables"
-@import "mixins/containers"
 @import "includes/header"
 @import "includes/footer"
 
@@ -11,11 +10,16 @@ html body
   padding: 0
   margin: 0
 
-p, button, ul, a, h1, h2, h3, h4
+p, button, ul, a, h1, h2, h3, h4, img
   margin: 0
   padding: 0
 
+a
+  text-decoration: none
+  display: block
+
 img
+  display: block
   width: 100%
   height: 100%
 
