--- a/src/_includes/artwork-card.html
+++ b/src/_includes/artwork-card.html
@@ -1,6 +1,6 @@
 <a href="{{ include.artwork.url }}">
   <div class="artwork_card">
-    <img src="{% asset_path card.jpg {{ include.artwork.id }} %}">
+    <img src="{% asset_path card.jpg {{ include.artwork.id }} %}"></img>
     <h4 class="artwork_card__title">{{ include.artwork.title }}</h4>
   </div>
 </a>
