--- a/src/_sass/includes/artwork-item.sass
+++ b/src/_sass/includes/artwork-item.sass
@@ -10,7 +10,7 @@
     max-height: 150px
     box-shadow: $shadow-2dp
     margin: 4px 0
-    border: 5px solid $grey
+    border: 5px solid $gray-dark
     box-sizing: border-box
     cursor: pointer
     object-fit: cover
