--- a/src/assets/css/artworks.sass
+++ b/src/assets/css/artworks.sass
@@ -1,10 +1,10 @@
 ---
 ---
+@import "variables"
+@import "mixins/containers"
+@import "mixins/buttons"
 @import "includes/artwork-card"
 
-p
-  font-size: 100px
- 
 .artworks
   &__list
     display: grid
