--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -1,14 +1,18 @@
 ---
 ---
 @import "variables"
+@import "wrapper"
 @import "includes/header"
 @import "includes/footer"
 
-html body
+html, body
   height: 100%
   width: 100%
   padding: 0
   margin: 0
+
+body
+  background-color: $black
 
 p, button, ul, a, h1, h2, h3, h4, img
   margin: 0
