Trying a latest feature on the home page. Commented out for the time being.

--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -23,6 +23,8 @@
     color: $yellow
     margin: 8px 0
     grid-area: body
+    &--wide
+      margin: 0 -16px 
 
   &__footer
     grid-area: footer
