--- a/src/_sass/variables.sass
+++ b/src/_sass/variables.sass
@@ -1,5 +1,8 @@
 $yellow: #FFC845 
 $white: #FFFFFF
+$light_gray-light: #666666
+$light_gray: #555555
+$light_gray-dark: #444444
 $gray-light: #444444
 $gray:       #333333
 $gray-dark:  #222222
