--- a/src/assets/css/home.sass
+++ b/src/assets/css/home.sass
@@ -6,6 +6,8 @@ $baseurl: "{{ site.url }}"
 @import "mixins/containers"
 @import "mixins/syantax"
 @import "includes/artwork-item"
+@import "includes/list-item"
+@import "includes/page-item"
 
 .about
   &__text
