--- a/src/_sass/wrapper.sass
+++ b/src/_sass/wrapper.sass
@@ -1,3 +1,8 @@
+.wrapper
+  display: grid
+  min-height: 100%
+  grid-template-rows: auto 1fr auto
+
 @media screen and (max-width: 760px)
   .wrapper
     width: 100vw
