--- a/src/assets/css/home.sass
+++ b/src/assets/css/home.sass
@@ -5,6 +5,7 @@ $baseurl: "{{ site.url }}"
 @import "mixins/buttons"
 @import "mixins/containers"
 @import "mixins/syantax"
+@import "mixins/banner"
 @import "includes/artwork-item"
 @import "includes/list-item"
 @import "includes/page-item"
