WIP styling around grid containers.

--- a/src/_includes/artwork-item.html
+++ b/src/_includes/artwork-item.html
@@ -1,4 +1,4 @@
-<div class="artwork_item">
+<div class="artwork_item containerz containerz--flat">
   <h3 class="artwork_item__type">- {{ include.label }} <span class="syantax-colon">:</span></h3>
   <a href="{{ include.artwork.url }}">
     <h4 class="artwork_item__title button-inline">{{ include.artwork.title }}</h4>
