--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -42,6 +42,24 @@
   grid-template-columns: 1fr
   grid-template-rows: auto
   column-gap: 16px
-  row-gap: 8px
+  row-gap: 16px
+  padding: 16px
   &--flat
     border: none
+  
+  &__header
+    padding-left: 16px
+    margin-left: -32px
+    margin-right: -16px
+
+  &__footer
+    justify-self: right
+
+.container-small
+  display: grid
+  grid-template-columns: 1fr
+  grid-template-rows: auto
+  column-gap: 6px
+  row-gap: 6px
+  padding: 6px
+  
