--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -20,7 +20,6 @@ p, button, ul, a, h1, h2, h3, h4, img
 
 a
   text-decoration: none
-  display: block
 
 img
   display: block
@@ -38,6 +37,7 @@ h3, h4
 
 h3
   font-weight: lighter
+  color: $yellow
 
 h1
   color: $yellow
@@ -46,6 +46,7 @@ h1
 
 button, p, li
   font-size: 16px
+  color: $yellow
 
 p, li
   font-family: $font-body
