--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width">
+    
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
+   
     <link rel='stylesheet' href="/assets/css/base.css">
     <title>Joel Lithgow</title>
   </head>
