--- a/src/_sass/mixins/banner.sass
+++ b/src/_sass/mixins/banner.sass
@@ -1,5 +1,7 @@
 .banner
   background-color: $yellow
+  border-top: 1px solid $yellow--light
+  border-bottom: 1px solid $yellow--dark
   box-shadow: $shadow-3dp
   color: $black
   padding: 8px 16px 8px 16px
