--- a/src/_sass/wrapper.sass
+++ b/src/_sass/wrapper.sass
@@ -1,6 +1,6 @@
 .wrapper
   display: grid
-  min-height: 100%
+  height: 100%
   grid-template-rows: auto 1fr auto
 
 @media screen and (max-width: 760px)
