--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -49,7 +49,7 @@
   
   &__header
     padding-left: 16px
-    margin-left: -32px
+    margin-left: -16px
     margin-right: -16px
 
   &__footer
@@ -62,4 +62,7 @@
   column-gap: 6px
   row-gap: 6px
   padding: 6px
-  
+
+.container-inline
+  display: inline-flex
+  padding: 6px
