--- a/src/assets/css/artwork.sass
+++ b/src/assets/css/artwork.sass
@@ -4,3 +4,5 @@
 @import "mixins/buttons"
 @import "mixins/containers"
 @import "mixins/banner"
+@import "includes/artwork-card"
+@import "includes/artwork-item"
