--- a/src/assets/css/artworks.sass
+++ b/src/assets/css/artworks.sass
@@ -3,11 +3,10 @@
 @import "variables"
 @import "mixins/containers"
 @import "mixins/buttons"
+@import "mixins/banner"
 @import "includes/artwork-card"
 
 .artworks
   &__list
-    display: grid
-    grid-template-columns: 1fr 1fr
-    grid-gap: 16px
-    list-style: none
+    grid-gap: 0
+  &__filters
