Working on nav + semantics.

--- a/src/_sass/mixins/buttons.sass
+++ b/src/_sass/mixins/buttons.sass
@@ -14,3 +14,14 @@
 .button-inline
   color: $yellow
   text-decoration: underline
+
+.button-icon
+  border: none
+  display: flex
+  align-items: center
+  background-color: transparent
+  outline: none
+  color: $black
+  width: 32px
+  height: 32px
+  padding: 8px
