--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -40,7 +40,7 @@
   background-color: $gray
   display: grid
   grid-template-columns: 1fr
-  grid-template-rows: auto
+  grid-template-rows: minmax(0, max-content)
   column-gap: 16px
   row-gap: 16px
   padding: 16px
@@ -58,7 +58,7 @@
 .container-small
   display: grid
   grid-template-columns: 1fr
-  grid-template-rows: auto
+  grid-template-rows: minmax(0, max-content)
   column-gap: 6px
   row-gap: 6px
   padding: 6px
