--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -3,19 +3,39 @@
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width">
     
-    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
-<script>eruda.init();</script>
+    {% if jekyll.enviroment == "debug" %}
+      <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+      <script>eruda.init();</script>
+    {% endif %}
+
+    <script src="/assets/js/menu_init.js"></script>
    
     <link rel='stylesheet' href="/assets/css/base.css">
+
     <title>Joel Lithgow</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      {% include header.html %}
-      <div class="wrapper__content">
+    <section id="wrapper">
+      <header class="header">
+        <a class="header__logo" href="/">
+          <h1>/ Jlithgow.com</h1>
+        </a>
+      </header>
+
+      <main>
         {{ content }}
-      </div>
-      {% include footer.html %}
-    </div>
+      </main>
+
+      <footer class="footer">
+        <h1 class="footer__logo">2020</h1>
+      </footer>
+
+      {% include navigation.html %}
+    </section>
   </body>
+
+  <footer>
+    <script src="/assets/js/menu.js"></script> 
+  </footer>
 </html>
