--- a/src/_sass/variables.sass
+++ b/src/_sass/variables.sass
@@ -24,4 +24,8 @@ $font-body: "Open Sans", sans-serif
 
 $shadow-2dp: 0 2px 4px 0 rgba(0,0,0,0.5)
 $shadow-3dp: 0 3px 6px 0 rgba(0,0,0,0.5)
+$shadow-6dp: 0 6px 12px 0 rgba(0,0,0,0.5)
+$shadow-6dp--flipped: 0 -6px 12px 4px rgba(0,0,0,0.35)
 
+$screen-mobile: 460px
+$screen-mobile--landscape: 760px
