--- a/src/_sass/wrapper.sass
+++ b/src/_sass/wrapper.sass
@@ -1,16 +1,32 @@
-.wrapper
+#wrapper
   display: grid
   height: 100%
-  grid-template-rows: auto 1fr auto
+  grid-template-rows: auto 1fr auto auto
 
-@media screen and (max-width: 760px)
-  .wrapper
-    width: 100vw
+  & > header
+    grid-area: head
+
+  & > main
+    grid-area: main
+
+  & .nav-bottom
+    grid-area: nav-bottom
+
+  & .nav-drawer
+    grid-area: nav-drawer
+
+  & > footer
+    grid-area: footer
+
+@media screen and (max-width: $screen-mobile)
+  #wrapper
+    width: 100%
     margin: 0
     padding: 0
+    grid-template-areas: "head" "main" "footer" "nav-bottom"
 
-@media screen and (max-width: 760px) and (orientation: landscape)
-  .wrapper
+@media screen and (max-width: $screen-mobile--landscape) and (orientation: landscape)
+  #wrapper
     width: 360px
     margin: 0 auto
     padding: 0
