--- a/src/_sass/includes/artwork-card.sass
+++ b/src/_sass/includes/artwork-card.sass
@@ -2,12 +2,21 @@
   border-radius: 3px
   background-color: $gray
   box-shadow: $shadow-2dp
+  padding: 0
+  margin: 6px
   
   &__title
     color: $black
+
+  &__date
+    font-size: 18px
+
+  &__meta
     padding: 4px 8px
     background-color: $yellow
     border-radius: 0 0 3px 3px
+    & > div
+      flex: 1
 
   & img
     border-radius: 3px 3px 0 0
