--- a/src/assets/css/artwork.sass
+++ b/src/assets/css/artwork.sass
@@ -4,5 +4,6 @@
 @import "mixins/buttons"
 @import "mixins/containers"
 @import "mixins/banner"
+@import "mixins/sections"
 @import "includes/artwork-card"
 @import "includes/artwork-item"
