--- a/src/_includes/artwork-card.html
+++ b/src/_includes/artwork-card.html
@@ -1,6 +1,12 @@
-<a href="{{ include.artwork.url }}">
-  <div class="artwork_card">
-    <img src="{% asset_path card.jpg {{ include.artwork.id }} %}"></img>
-    <h4 class="artwork_card__title">{{ include.artwork.title }}</h4>
-  </div>
+{% assign artwork = include.artwork %}
+
+<a href="{{ artwork.url }}">
+  <article class="artwork_card">
+    <img src="{% asset_path card.jpg {{ artwork.id }} %}"></img>
+    <section class="container-inline artwork_card__meta">
+      <h5 class="artwork_card__date">{{ artwork.date | date: "%y%m%d"}} |<h5>
+      <h4 class="artwork_card__title">{{ artwork.title }}</h4>
+      <div></div>
+    <section>
+  </article>
 </a>
