--- a/src/_includes/artwork-item.html
+++ b/src/_includes/artwork-item.html
@@ -11,7 +11,7 @@
     </a>
   </section>
 
-  {% if artwork.thumbnail == true %}
+  {% if artwork.missing-images == false %}
   <a href="{{ artwork.url }}">
     <img class="artwork_item__image" src="{% asset_path thumbnail.jpg {{ artwork.id }} %}">
   </a>
