Added artwork and images.

--- a/src/_includes/artwork-card.html
+++ b/src/_includes/artwork-card.html
@@ -2,7 +2,7 @@
 
 <a href="{{ artwork.url }}">
   <article class="artwork_card">
-    <img src="{% asset_path card.jpg {{ artwork.id }} %}"></img>
+    <img src="{% asset_path cover.jpg {{ artwork.id }} %}"></img>
     <section class="container-inline artwork_card__meta">
       <h5 class="artwork_card__date">{{ artwork.date | date: "%y%m%d"}} |<h5>
       <h4 class="artwork_card__title">{{ artwork.title }}</h4>
