--- a/src/_includes/artwork-item.html
+++ b/src/_includes/artwork-item.html
@@ -13,7 +13,7 @@
 
   {% if artwork.missing-images == false %}
   <a href="{{ artwork.url }}">
-    <img class="artwork_item__image" src="{% asset_path thumbnail.jpg {{ artwork.id }} %}">
+    <img class="artwork_item__image" src="{% asset_path card.jpg {{ artwork.id }} %}">
   </a>
   {% endif %}
 
