--- a/src/assets/css/home.sass
+++ b/src/assets/css/home.sass
@@ -7,6 +7,7 @@ $baseurl: "{{ site.url }}"
 @import "mixins/banner"
 @import "mixins/syantax"
 @import "includes/artwork-item"
+@import "includes/artwork-card"
 @import "includes/list-item"
 @import "includes/page-item"
 
