Changed around sass dependencies to fix artwork-detail page without addeding new css to that page.

--- a/src/_layouts/artwork.html
+++ b/src/_layouts/artwork.html
@@ -4,7 +4,7 @@ layout: default
 <link rel="stylesheet" href="/assets/css/artwork-detail.css">
 
 <div class="containerz">
-  <h2>{{ page.title }}</h2>
+  <h2 class="banner">{{ page.title }}</h2>
   <div>
     {{ page.content }}
   </div>
