--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -2,6 +2,8 @@
 ---
 @import "variables"
 @import "wrapper"
+@import "mixins/containers"
+@import "mixins/banner"
 @import "includes/header"
 @import "includes/footer"
 @import "includes/menu"
