--- a/src/_sass/includes/artwork-card.sass
+++ b/src/_sass/includes/artwork-card.sass
@@ -1,22 +1,25 @@
 .artwork_card
-  border-radius: 3px
-  background-color: $gray
+  border-radius: 6px
+  background-color: $light-gray
   box-shadow: $shadow-2dp
-  padding: 0
-  margin: 6px
+  padding: 8px 12px
+  border: 4px solid $yellow
+  
+  & > img
+    border-radius: 3px
+    border: 1px solid $gray
+    box-shadow: inset $shadow-2dp
   
   &__title
     color: $black
+    font-size: 16px
+    font-weight: lighter
 
   &__date
     font-size: 18px
 
   &__meta
     padding: 4px 8px
-    background-color: $yellow
-    border-radius: 0 0 3px 3px
     & > div
       flex: 1
 
-  & img
-    border-radius: 3px 3px 0 0
