--- a/src/_sass/includes/artwork-promo.sass
+++ b/src/_sass/includes/artwork-promo.sass
@@ -1,22 +1,22 @@
-.artwork_promo
+.artwork-promo
   border-radius: 3px
   background-color: $gray
   box-shadow: $shadow-2dp
   padding: 0
   margin: 6px
   
-  &__title
+  & .__title
     color: $black
 
-  &__date
+  & .__date
     font-size: 18px
 
-  &__meta
+  & .__meta
     padding: 4px 8px
     background-color: $yellow
     border-radius: 0 0 3px 3px
     & > div
       flex: 1
 
-  & img
+  & > img
     border-radius: 3px 3px 0 0
