Fixed bug errors pointing to wrong template + added sass dependecncy for home page.

--- a/src/_layouts/artwork.html
+++ b/src/_layouts/artwork.html
@@ -6,7 +6,7 @@ layout: default
 <div class="containerz">
   <h2 class="banner">{{ page.title }}</h2>
   <section>
-    {% include artwork-card.html artwork=page %}
+    {% include artwork-promo.html artwork=page %}
   </section>
   <section>
     {{ page.content }}
