Added themeing foundation.

--- a/src/_sass/variables.sass
+++ b/src/_sass/variables.sass
@@ -7,7 +7,7 @@
 $yellow: #FFC845 
 $yellow--dark: shade($yellow, 25%)
 $yellow--light: tint($yellow, 25%)
-$white: #FFFFFF
+$white: #F1F1F1
 $light_gray-light: #666666
 $light_gray: #555555
 $light_gray-dark: #444444
@@ -29,3 +29,7 @@ $shadow-6dp--flipped: 0 -6px 12px 4px rgba(0,0,0,0.35)
 
 $screen-mobile: 460px
 $screen-mobile--landscape: 760px
+$screen-tablet: 768px
+$screen-laptop: 1024px
+$screen-desktop: 1440px
+
