--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -1,6 +1,7 @@
 ---
 ---
 @import "variables"
+@import "themes"
 @import "wrapper"
 @import "mixins/containers"
 @import "mixins/banner"
@@ -17,7 +18,6 @@ html, body
   margin: 0
 
 body
-  background-color: $black
   height: 100vh
   width: 100%
 
