--- a/src/_sass/includes/menu.sass
+++ b/src/_sass/includes/menu.sass
@@ -5,6 +5,7 @@
   height: 100vh
   width: 100%
   position: fixed
+  z-index: 20
   &--open
     display: flex
 
@@ -32,3 +33,4 @@
   bottom: 0
   box-shadow: $shadow-6dp--flipped
   padding: 8px
+  z-index: 16
