--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -1,14 +1,43 @@
+@media screen and (max-width: $screen-mobile)
+  .container
+    column-gap: 16px
+    row-gap: 8px
+    padding: 16px
+
+@media screen and (max-width: $screen-mobile--landscape) and (orientation: landscape)
+  .container
+    column-gap: 16px
+    row-gap: 8px
+    padding: 16px
+
+@media screen and (min-width: $screen-mobile) and (max-width: $screen-tablet)
+  .container
+    column-gap: 24px
+    row-gap: 16px
+    padding: 16px 32px
+
+@media screen and (min-width: $screen-tablet) and (max-width: $screen-laptop)
+  .container
+    column-gap: 20px
+    row-gap: 16px
+    padding: 16px 32px
+
+@media screen and (min-width: $screen-laptop) and (max-width: $screen-desktop)
+  .container
+    column-gap: 24px
+    row-gap: 16px
+    padding: 24px 48px
+
+@media screen and (min-width: $screen-desktop)
+  .container
+    column-gap: 32px
+    row-gap: 24px
+    padding: 32px 64px
+
 .container
-  border-top: 1px solid $gray-light
-  border-bottom: 1px solid $gray-dark
-  background-color: $gray
   display: grid
-  grid-template-columns: 1fr
-  grid-template-rows: auto 1fr auto
-  grid-template-areas: "header" "body" "footer"
-  column-gap: 16px
-  row-gap: 8px
-  padding: 16px
+  & > footer
+    justify-self: right
   
   &__header
     background-color: $yellow
