Added sections support and made the card responsive.

--- a/src/_includes/artwork-promo.html
+++ b/src/_includes/artwork-promo.html
@@ -1,12 +1,14 @@
 {% assign artwork = include.artwork %}
 
-<a href="{{ artwork.url }}">
-  <article class="artwork-promo">
-    <img src="{% asset_path cover.jpg {{ artwork.id }} %}"></img>
-    <section class="container-inline __meta">
-      <h5 class="__date">{{ artwork.date | date: "%y%m%d"}} |</h5>
+<article class="artwork-promo card">
+  <a href="{{ artwork.url }}">
+    <section class="large">
+      <img src="{% asset_path cover.jpg {{ artwork.id }} %}"></img>
+    </section>
+    <section class="__meta">
+      <h5 class="__date">{{ artwork.date | date: "%y%m%d"}}</h5>
       <h4 class="__title">{{ artwork.title }}</h4>
       <div></div>
-    <section>
-  </article>
-</a>
+    </section>
+  </a>
+</article>
