--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -4,6 +4,7 @@
 @import "themes"
 @import "wrapper"
 @import "mixins/containers"
+@import "mixins/sections"
 @import "mixins/banner"
 @import "includes/header"
 @import "includes/footer"
@@ -31,7 +32,8 @@ a
 
 img
   display: block
-  width: 100%
+  max-width: 100%
+  max-height: 100%
 
 svg
   width: 100%
