--- a/src/_sass/includes/artwork-promo.sass
+++ b/src/_sass/includes/artwork-promo.sass
@@ -4,19 +4,20 @@
   box-shadow: $shadow-2dp
   padding: 0
   margin: 6px
-  
+
   & .__title
     color: $black
+    justify-self: center
 
   & .__date
     font-size: 18px
 
   & .__meta
+    display: grid
+    grid-template-columns: 1fr 1fr 1fr
     padding: 4px 8px
     background-color: $yellow
     border-radius: 0 0 3px 3px
-    & > div
-      flex: 1
 
   & > img
     border-radius: 3px 3px 0 0
