--- a/src/_sass/mixins/containers.sass
+++ b/src/_sass/mixins/containers.sass
@@ -10,25 +10,25 @@
     row-gap: 8px
     padding: 16px
 
-@media screen and (min-width: $screen-mobile) and (max-width: $screen-tablet)
+@media screen and (min-width: $screen-mobile+1) and (max-width: $screen-tablet)
   .container
     column-gap: 24px
     row-gap: 16px
     padding: 16px 32px
 
-@media screen and (min-width: $screen-tablet) and (max-width: $screen-laptop)
+@media screen and (min-width: $screen-tablet+1) and (max-width: $screen-laptop)
   .container
     column-gap: 20px
     row-gap: 16px
     padding: 16px 32px
 
-@media screen and (min-width: $screen-laptop) and (max-width: $screen-desktop)
+@media screen and (min-width: $screen-laptop+1) and (max-width: $screen-desktop)
   .container
     column-gap: 24px
     row-gap: 16px
     padding: 24px 48px
 
-@media screen and (min-width: $screen-desktop)
+@media screen and (min-width: $screen-desktop+1)
   .container
     column-gap: 32px
     row-gap: 24px
