--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -6,6 +6,7 @@
 @import "mixins/containers"
 @import "mixins/sections"
 @import "mixins/banner"
+@import "mixins/buttons"
 @import "includes/header"
 @import "includes/footer"
 @import "includes/menu"
