--- a/src/_sass/includes/artwork-item.sass
+++ b/src/_sass/includes/artwork-item.sass
@@ -5,7 +5,7 @@
     display: inline-block
   &__image
     width: 100%
-    max-height: 150px
+    height: 100%
     box-shadow: $shadow-2dp
     border: 5px solid $gray-dark
     box-sizing: border-box
