Changed nav color and added support for themeing.

--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -4,11 +4,11 @@
 
 <div class="nav-drawer">
   <nav class="nav-drawer__nav">
-    <header class="containerz">
+    <header class="container theme-primary">
       <h1>Joel Lithgow</h1>
     </header>
 
-    <main class="containerz">
+    <main class="container theme-primary">
       <a href="/">
         <h3>home</h3>
       </a>
@@ -34,5 +34,6 @@
       </a>
     </main>
   </nav>
+
   <div class="nav-drawer__offclick"></div>
 </div>
