--- a/src/_sass/includes/menu.sass
+++ b/src/_sass/includes/menu.sass
@@ -10,7 +10,7 @@
     display: flex
 
   &__nav
-    background-color: $gray
+    background-color: $yellow
     flex: 3
     color: $yellow
     box-shadow: $shadow-6dp
