--- a/src/_sass/themes.sass
+++ b/src/_sass/themes.sass
@@ -15,3 +15,11 @@ body
   border-top: 1px solid $gray-light
   border-bottom: 1px solid $gray-dark
   background-color: $gray
+  color: $yellow
+
+.theme-primary
+  border-top: 1px solid $yellow--light
+  border-bottom: 1px solid $yellow--dark
+  background-color: $yellow
+  color: $black
+  
