Fixed some styling issues within the artwork section.

--- a/src/assets/css/artworks.sass
+++ b/src/assets/css/artworks.sass
@@ -5,8 +5,4 @@
 @import "mixins/buttons"
 @import "mixins/banner"
 @import "includes/artwork-card"
-
-.artworks
-  &__list
-    grid-gap: 0
-  &__filters
+@import "includes/artwork-item"
