--- a/src/_layouts/artwork.html
+++ b/src/_layouts/artwork.html
@@ -93,7 +93,7 @@ layout: default
 
 <div id="breakcrumbs" class="container">
   <section class="halfs">
-    <a href="/artworks/">
+    <a href="/artworks/#{{ page.id }}">
       <button class="secondary">
         artworks
       </button>
