--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -5,6 +5,7 @@
 @import "wrapper"
 @import "mixins/containers"
 @import "mixins/sections"
+@import "mixins/images"
 @import "mixins/banner"
 @import "mixins/buttons"
 @import "includes/header"
