BUG: Fixed the way the cover photo works for funky sized photos.

--- a/src/_layouts/artwork.html
+++ b/src/_layouts/artwork.html
@@ -15,7 +15,7 @@ layout: default
 
   <section class="overlay overlay-br">
     <main>
-      <img src="{% asset_path cover.jpg {{ page.id }} %}"></img>
+      <img class="fit" src="{% asset_path cover.jpg {{ page.id }} %}"></img>
     </main>
     <aside>
       <a href="{% asset_path original.{{ page.original-file }} {{ page.id }} %}" target="_blank">
