Style: changed font width for mobile. need to check on desktop.

--- a/src/assets/css/base.sass
+++ b/src/assets/css/base.sass
@@ -3,6 +3,7 @@
 @import "variables"
 @import "themes"
 @import "wrapper"
+@import "fonts"
 @import "mixins/containers"
 @import "mixins/sections"
 @import "mixins/images"
@@ -42,52 +43,6 @@ svg
 
 ul
   list-style: none
-
-
-h1, h2, h3, button, a
-  font-family: $font-header
-
-button, li, h6
-  font-size: 16px
-
-li
-  font-family: $font-body
-  font-weight: lighter
-
-p
-  font-size: 16px
-  font-weight: lighter
-  font-family: $font-body 
-
-h1
-  font-size: 20px
-  font-weight: 200
-
-h2
-  text-decoration: inherit
-  font-size: 20px
-  font-weight: 600
-  font-family: $font-header
-  
-h3
-  font-size: 18px
-  font-weight: lighter
-
-h4
-  font-size: 18px
-  font-weight: lighter
-  font-family: $font-header
-
-h5
-  font-size: 16px
-  font-weight: lighter
-  font-family: $font-body
-
-h6
-  font-size: 16px
-  font-weight: lighter
-  font-family: $font-body
-  font-style: italic
 
 hr
   border: 0.5px solid $yellow
