--- a/src/_sass/fonts.sass
+++ b/src/_sass/fonts.sass
@@ -1,3 +1,59 @@
 @font-face
   font-family: Fugaz
   src: url(/assets/fonts/FugazOne-Regular.ttf)
+
+h1, h2, h3, button, a
+  font-family: $font-header
+
+button, li, h6
+  font-size: 16px
+
+li
+  font-family: $font-body
+  font-weight: lighter
+
+p
+  font-size: 16px
+  font-weight: lighter
+  font-family: $font-body 
+
+h1
+  font-size: 20px
+  font-weight: 200
+
+h2
+  text-decoration: inherit
+  font-size: 20px
+  font-weight: 600
+  font-family: $font-header
+  
+h3
+  font-size: 18px
+  font-weight: lighter
+
+h4
+  font-size: 18px
+  font-weight: lighter
+  font-family: $font-header
+
+h5
+  font-size: 16px
+  font-weight: lighter
+  font-family: $font-body
+
+h6
+  font-size: 16px
+  font-weight: lighter
+  font-family: $font-body
+  font-style: italic
+
+@media screen and (max-width: $screen-mobile)
+  p, li
+    font-weight: 300
+
+  h3
+    font-weight: 400
+  h4
+    font-weight: 300
+  h6, h5
+    font-weight: 200
